--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "express": "^4.21.0",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.15",
     "pino": "^9.4.0",
     "pino-http": "^4.3.0"
   }
