'step3-post/auth/send-form200-st500-wrong-response'

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-port=
+PORT=
 
 MONGODB_USER=
 MONGODB_PASSWORD=
@@ -11,3 +11,6 @@ SMTP_USER=
 SMTP_PASSWORD=
 SMTP_FROM=
 JWT_SECRET=
+BACKEND_DOMAIN=
+FRONTEND_DOMAINN=
+APP_DOMAIN=
