--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "pino": "^9.4.0",
     "pino-http": "^4.3.0"
