--- a/docs/swagger/paths/contacts/get.yaml
+++ b/docs/swagger/paths/contacts/get.yaml
@@ -71,6 +71,7 @@ responses:
                 data:
                   type: array
                   items:
+                    type: object
                     $ref: '../../components/schemas/Contact.yaml'
                 page:
                   type: number
